No need for intermediary field.txt file